--- a/docs/03.网络与信息安全/01.密码工程/04.杂项/04.论文与专利写作.md
+++ b/docs/03.网络与信息安全/01.密码工程/04.杂项/04.论文与专利写作.md
@@ -1,5 +1,5 @@
 ---
-title: 论文阅读与写作
+title: 论文与专利写作
 date: 2025-5-8
 private: true
 author: 
@@ -27,15 +27,12 @@ Zotero 安装
 
 云同步：坚果云
 
-## PPT
+## PPT 和作图
 
-[Slidev | Arkrypto](http://localhost:8080/pages/7facd9/)
+- [Slidev | Arkrypto](http://arkrypto.github.io/pages/7facd9/)
+- PPT - 最好的画图工具
 
-## 作图
-
-PPT：最好的画图工具
-
-## IDEA
+## Idea
 
 ### Recognize U Dogs
 
@@ -62,4 +59,15 @@ PPT：最好的画图工具
 1. 抗量子协商 → 抗量子的 DH 方案 / Kyber KEM 方案
 2. 抗量子签名 → Falcon 签名
 3. 快速切换 / 权限切割 → 可擦除签名，变色龙哈希
-4. 群组认证 → 聚合签名
+
+### Sanitizable RFID Auth
+
+大家可以考虑一个这样的问题：标签 a 和阅读器 A 预留有认证数据（标签 a 属于阅读器 A），如何在不涉及后端服务器的情况下，标签 a 向阅读器 B 证明其合法性以及其所有权如何从 B 转移到 C
+
+1. 可擦除签名
+2. 群组认证 → 聚合签名
+
+## 专利写作
+
+### 技术交底书
+
