--- a/docs/04.我的/01.琴酒和猫/03.基本乐理.md
+++ b/docs/04.我的/01.琴酒和猫/03.基本乐理.md
@@ -211,9 +211,9 @@ x 级和弦实际上是一个固定几个音的组合，比如Ⅰ级和弦就是
 
 <img src="./assets/v2-d35d0f78171ecbc20ef90bbbabda095e_r.jpg">
 
-## 基本技巧和特殊调弦
+## 基本技巧
 
-看着都手腕痛
+腱鞘在啸叫
 
 - 击弦
 - 勾弦
@@ -229,201 +229,6 @@ x 级和弦实际上是一个固定几个音的组合，比如Ⅰ级和弦就是
 
 特殊调弦
 
-- 降半调调弦
+- 降半调调弦：将变调夹夹 1 品，调音成 EADGBE（即正常调弦）
 - Open D
 - Open E
-
-## 我的歌单
-
-### 练习
-
-2025
-
-- 匆匆那年
-- 一路向北
-- 你离开的真相
-- 普通朋友
-- 讨厌红楼梦
-- 黄金之风
-- 山丘
-- Shape of My Heart
-- 水星记
-- 春日影
-- 老北京的小曲
-- 男孩
-- 十年
-- 才二十三
-- Counting Stars
-- 回留
-- 灰色轨迹
-- 爱爱爱
-
-### 流行
-
-陈奕迅 2019
-
-- 我的快乐时代
-- 今日
-- 落花流水
-- 歌颂
-- 十面埋伏
-- 失忆蝴蝶
-- 阿牛
-- 七百年后
-- 喜帖街
-- 远在咫尺
-- 黄金时代
-- 葡萄成熟时
-- 无条件
-- 我们万岁
-- 夕阳无限好
-- 活着多好
-- 苦瓜
-- 陀飞轮
-- 倾城
-- 岁月如歌
-- 垃圾
-- 倒带人生
-- 我什么都没有
-- 抱拥这分钟
-- 你给我听好
-- 你的背包
-- 红玫瑰
-- 爱情转移
-- 不要说话
-- 淘汰
-
-麦浚龙 2020
-
-- 耿耿于怀
-- 念念不忘
-- 罗生门
-- 借火
-- 勇悍·17
-- 雷克雅未克
-- 彳亍
-- 超生培欲
-
-周柏豪 2020
-
-- 百年不合
-- 传闻
-- 够钟
-- 宏愿
-- 必杀技
-- 小白
-- 蓝血人
-- 还记得
-
-苏永康 2020
-
-- 那谁
-
-谢安琪 2020
-
-- 年度之歌
-- 喜帖街
-
-王菲 2021
-
-- 暗涌
-- 百年孤寂
-- 开到茶靡
-- 约定
-- 红豆
-- 匆匆那年
-- 暧昧
-- 笑忘书
-- 爱与痛的边缘
-- 容易受伤的女人
-- 季候风
-
-容祖儿 2022
-
-- 心淡
-- 黄色大门
-- 东京人寿
-
-Beyond 2021
-
-- 不再犹豫
-- 冷雨夜
-- 大地
-- 灰色轨迹
-- 再见理想
-- 无尽空虚
-- 农民
-- 长城
-
-吴雨霏 2021
-
-- 吴哥窟
-- 我本人
-
-张敬轩 2022
-
-- 我的天
-- Deadline
-- 樱花树下
-- 约定
-- 少女的祈祷
-- 心乱如麻
-- 春秋
-- 酷爱
-
-### R&B
-
-梁博 2022
-
-- 男孩
-- 出现又离开
-- 曾经是情侣
-- 日落大道
-
-方呆同 2024
-
-- 才二十三
-- Love Song
-- 爱爱爱
-- 回留
-- 麦恩莉
-- 特别的人
-- 三人游
-- 四人游
-- 红豆
-- 春风吹
-- 苏丽珍
-- 孤独患者
-- 小小虫
-- 爱在
-- 手拖手
-- Rosy
-- 每个人都会
-- 歌手与模特
-
-陶喆 2024
-
-- 蝴蝶
-- 二十二
-- 讨厌红楼梦
-- 普通朋友
-
-丁世光 2025
-
-- 蝴蝶山
-- 瘦子
-- 行李
-
-### 摇滚
-
-万青 2023
-
-- 杀死那个石家庄人
-- 秦皇岛
-- 大石碎胸口
-
-Oasis 2021
-
-- Don't Look Back in Anger
-- Wonderwall
-- Stand by Me
